welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:11: error: ';' expected but '=' found.
if (vuBiscuit=true){return=true}else{return=false}
                          ^Program:11: error: ';' expected but '=' found.
if (vuBiscuit=true){return=true}else{return=false}
                                           ^